kiteshield page fix

--- a/georegions/KiteshieldPenencila.html
+++ b/georegions/KiteshieldPenencila.html
@@ -25,4 +25,24 @@
 
 <p>This is a temporary page intended to allow for navigation to the pages detailing the local regions contained within the Kiteshield Penencila. Please excuse the rough edges. The Eyom Digital Encyclopedia is a very large project.</p>
 <div style="margin-left: 5%;">
+  <a href="../regions/Se̜n-re̜nWoods.html">Se̜n-re̜n Woods</a></br>
+  <a href="../regions/Gdo̠AtjikPrairie.html">Gdo̠ Atjik Prairie</a></br>
+  <a href="../regions/Skre̜vZrabbi̽Grasslands.html">Skre̜v Zrabbi̽ Grasslands</a></br>
+  <a href="../regions/Qe̜dKuqüeWoodlands.html">Qe̜d Kuqüe Woodlands</a></br>
+  <a href="../regions/Wi̽fto-kimblokFields.html">Wi̽fto-kimblok Fields</a></br>
+  <a href="../regions/Yö-kröqüeSteppe.html">Yö-kröqüe Steppe</a></br>
+  <a href="../regions/E̜styǟgiqüeŌtForest.html">E̜styǟgiqüe Ōt Forest</a></br>
+  <a href="../regions/LjidLöchy-mōgtsi̽nwekHolt.html">Ljid Löchy-mōgtsi̽nwek Holt</a></br>
+  <a href="../regions/Ye̜-hidHolt.html">Ye̜-hid Holt</a></br>
+  <a href="../regions/Löt-vakExpance.html">Löt-vak Expance</a></br>
+  <a href="../regions/MböKǟsForest.html">Mbö Kǟs Forest</a></br>
+  <a href="../regions/NandloO̠wWoodlands.html">Nandlo O̠w Woodlands</a></br>
+  <a href="../regions/Fëstve̜chyHikMoorland.html">Fëstve̜chy Hik Moorland</a></br>
+  <a href="../regions/ZëchyAwënMeadows.html">Zëchy Awën Meadows</a></br>
+  <a href="../regions/Ir-kobtekFields.html">Ir-kobtek Fields</a></br>
+  <a href="../regions/Krëio-köbzeForest.html">Krëio-köbze Forest</a></br>
+  <a href="../regions/NrotE̜qüeHolt.html">Nrot E̜qüe Holt</a></br>
+  <a href="../regions/I̽wi̽Hyento̠Moorland.html">I̽wi̽ Hyento̠ Moorland</a></br>
+  <a href="../regions/NtiqüeNövHeath.html">Ntiqüe Növ Heath</a></br>
+  <a href="../regions/SmaKöbzeShrublands.html">Sma Köbze Shrublands</a></br>
 </div>
