--- a/Fallout/world/COM.html
+++ b/Fallout/world/COM.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Boston Commonwealth</h1>
       <p><figure style="width:50%"><img src="../img/bostonmap.webp" style="width:100%"><figcaption>The Boston Commonwealth</figcaption></figure>The Boston area has undergone significant changes under the leadership of Nora, the Sole Survivor and Director of the Institute. With the Railroad and the Institute having made peace, the region has experienced a new era of cooperation and progress.</p>
