--- a/Fallout/world/RON.html
+++ b/Fallout/world/RON.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>Ronto</h1>
       <p><figure><img src="../img/ronto.webp" style="width:100%"><figcaption>Ronto Emblem</figcaption></figure>Ronto is a faction located in the former Canadian province of Ontario. Led by a High Council of elected representatives, Ronto is a democratic nation that is dedicated to rebuilding and improving the lives of its citizens in the aftermath of the nuclear apocalypse.</p>
