--- a/Fallout/world/SHI.html
+++ b/Fallout/world/SHI.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Shi</h1>
       <p><figure><img src="../img/SHI.webp" style="width:100%"><figcaption>The Shi's Flag</figcaption></figure>The Shi are a faction of descendants of Chinese submarine crew members who survived the Great War by taking shelter in a nuclear submarine that was submerged off the coast of San Francisco. Over time, the crew members and their families formed a new community, blending elements of Chinese and American culture into a unique and thriving civilization.</p>
