--- a/Fallout/index.html
+++ b/Fallout/index.html
@@ -22,6 +22,13 @@
       </br>
       <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="clock.js"></script>
     <img class="pagebg" src="img/pipboy2000.webp"></img>
     <div id="navcontainer" class="navcontainer">
       <script src="pipnav.js"></script>
