--- a/Fallout/utilities/blank.html
+++ b/Fallout/utilities/blank.html
@@ -19,6 +19,13 @@
       </br>
       <button type="button" name="button" class="redglow"></button><span class=buttontext>testing</span>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
