--- a/Fallout/world/APO.html
+++ b/Fallout/world/APO.html
@@ -11,6 +11,13 @@
     <div id="buttonpannel" class="buttonpannel">
 
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <img class="pagebg" src="../img/pipboy2000.webp"></img>
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
