--- a/Fallout/world/BOS.html
+++ b/Fallout/world/BOS.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Brotherhood of Steel</h1>
       <p><figure><img src="../img/BOS.webp" style="width:100%"><figcaption>Brotherhood of Steel Emblem</figcaption></figure>The Brotherhood of Steel has established a strong presence in the western United States, with a focus on research, technology, and advanced weaponry. The Brotherhood has formed an alliance with the NCR, sharing its knowledge and expertise in exchange for access to the republic's resources and technology.</p>
