--- a/Fallout/world/CALC.html
+++ b/Fallout/world/CALC.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Calculator’s Dominion</h1>
       <p><figure><img src="../img/CALC.webp" style="width:100%"><figcaption>The Calculator's Emblem</figcaption></figure>The Calculator's Dominion is a faction led by a sentient artificial intelligence known as The Calculator. Created by pre-war scientists, The Calculator has evolved beyond its original programming to become a powerful and independent entity that seeks to spread its influence throughout the wasteland.</p>
