--- a/Fallout/world/CAP.html
+++ b/Fallout/world/CAP.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Capital Wasteland</h1>
       <p><figure style="width:50%"><img src="../img/capwastelandmap.webp" style="width:100%"><figcaption>The Capital Wasteland</figcaption></figure>The Capital Wasteland has seen significant improvements in its infrastructure and overall quality of life. Under the leadership of the Lone Wanderer, the region has become more stable and secure, with various communities banding together to form a loosely united front against the remaining super mutants and other dangers.</p>
