--- a/Fallout/world/ENC.html
+++ b/Fallout/world/ENC.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Enclave</h1>
       <p><figure><img src="../img/ENC.webp" style="width:100%"><figcaption>Enclave Seal</figcaption></figure>The Enclave has suffered a major setback with the rise of the NCR, and has been forced to retreat and rebuild. The Enclave is now operating from a remote, underground facility hidden away from the prying eyes of the NCR.</p>
