--- a/Fallout/world/GAM.html
+++ b/Fallout/world/GAM.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>Gammorin's Army</h1>
       <p><figure><img src="../img/GAM.webp" style="width:100%"><figcaption>Gammorin's Army Emblem</figcaption></figure>Gammorin's Army is a faction of super mutants that originated as an offshoot of the Unity, which was created by the Master in California. After the destruction of the Unity, Gammorin, a super mutant who had served as a commander under the Master, took command of the mutant army and led them on a journey eastward.</p>
