--- a/Fallout/world/GOR.html
+++ b/Fallout/world/GOR.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Tribe of Goris</h1>
       <p><figure><img src="../img/GOR.webp" style="width:100%"><figcaption>The Tribe of Goris Mark</figcaption></figure>After their initial encounter with the Chosen One and the defeat of the Enclave, the deathclaws of Vault 13 began to explore their newfound intelligence and abilities. They formed a close-knit community within the vault, and began to experiment with new technologies and innovations that they had learned from the Chosen One and their travels.</p>
