--- a/Fallout/world/Hawaii.html
+++ b/Fallout/world/Hawaii.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Kingdom of Hawaii</h1>
       <p><figure><img src="../img/Hawaii.webp" style="width:100%"><figcaption>Kingdom of Hawaii Emblem</figcaption></figure>The Kingdom of Hawaii is a remote tropical paradise, untouched by nuclear devastation, but incapable of maintaining pre-war infrastructure without the support of the mainland USA. In recent years, it has made contact with NCR, who’s technological advancements and dedication to rebuilding the wasteland greatly assisted Hawaii with their rebuilding efforts. As a result, Hawaii has a greater focus on sustainability and environmental protection than most of the wasteland’s nations.</p>
