--- a/Fallout/world/ISS.html
+++ b/Fallout/world/ISS.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Republic of Texas</h1>
       <p>The Issaquah Nation is a faction located in the Pacific Northwest region of the former United States. Led by a council of tribal elders, the Issaquah Nation is a confederation of Native American tribes that have come together to rebuild their ancestral lands.</p>
