--- a/Fallout/world/KAH.html
+++ b/Fallout/world/KAH.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Great Kahns</h1>
       <p><figure><img src="../img/KAH.webp" style="width:100%"><figcaption>Great Kahns Tag</figcaption></figure>The Great Kahns are a faction located in the southwestern region of the former United States. Originally a raider group, they were reformed after the events of the second Battle of Hoover Dam, and have since become a powerful force in the region. The Great Kahns are now led by a chieftain named Darion, who is known for his tactical genius and charisma.</p>
