--- a/Fallout/world/LEG.html
+++ b/Fallout/world/LEG.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>Caesar's Legion</h1>
       <p><figure><img src="../img/LEG.webp" style="width:100%"><figcaption>Caesar's Legion Banner</figcaption></figure>With the defeat of the Legion in the Mojave, the once-mighty faction splintered into smaller groups, each vying for power and control over their own territories.</p>
