--- a/Fallout/world/MID.html
+++ b/Fallout/world/MID.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Mid-West Brotherhood</h1>
       <p><figure><img src="../img/BoS.webp" style="width:100%"><figcaption>The Mid-West Brotherhood Emblem</figcaption></figure>The Mid-West Brotherhood is a faction of the Brotherhood of Steel that has established a presence in the Midwestern United States. Led by a Council of Elders, the Mid-West Brotherhood is dedicated to preserving technology and knowledge, and to protecting the people of the wasteland from the dangers of the post-apocalyptic world.</p>
