--- a/Fallout/world/MOJ.html
+++ b/Fallout/world/MOJ.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Mojave</h1>
       <p><figure style="width:50%"><img src="../img/Mojavemap.webp" style="width:100%"><figcaption>The Mojave</figcaption></figure>After the conflict with the New California Republic and Ceaser’s Legion, the Mojave Wasteland underwent a significant transformation. The NCR established a permanent military presence in the region, with a number of large bases and settlements built throughout the Mojave.</p>
