--- a/Fallout/world/NCR.html
+++ b/Fallout/world/NCR.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The NCR</h1>
       <p><figure><img src="../img/NCRlogo.webp" style="width:100%"><figcaption>NCR Seal</figcaption></figure>The NCR is a large, democratic republic that controls much of the western United States, stretching from California to Nevada, Arizona, and parts of Oregon and Washington. Its capital is located in the former city of Los Angeles, which has been rebuilt as a sprawling metropolis with skyscrapers, highways, and advanced infrastructure.</p>
