--- a/Fallout/world/PIT.html
+++ b/Fallout/world/PIT.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Pit</h1>
       <p><figure><img src="../img/PITT.webp" style="width:100%"><figcaption>The Pit Seal</figcaption></figure>The Pitt is a faction located in the ruins of Pittsburgh, Pennsylvania. Led by an Overboss who rules through strength and cunning, The Pitt is a brutal and unforgiving place where the strong survive and the weak are exploited.</p>
