--- a/Fallout/world/REA.html
+++ b/Fallout/world/REA.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Reaver Movment</h1>
       <p><figure><img src="../img/REA.webp" style="width:100%"><figcaption>The Reaver Symbol</figcaption></figure>The Reaver Movement is a faction located in the northeastern region of the former United States. They are a group of survivors who banded together in the aftermath of the Great War, with a goal of creating a new society based on their own principles. The Reaver Movement is led by a charismatic leader known as the Reaver, whose real name is unknown.</p>
