--- a/Fallout/world/TEX.html
+++ b/Fallout/world/TEX.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>The Republic of Texas</h1>
       <p><figure><img src="../img/TEX.webp" style="width:100%"><figcaption>Republic of Texas Seal</figcaption></figure>The Republic of Texas is a powerful and independent nation that has emerged in the aftermath of the Great War. With a focus on agriculture, oil production, and advanced manufacturing, the Republic has become a major economic power in the southern United States.</p>
