--- a/Fallout/world/TEXAN.html
+++ b/Fallout/world/TEXAN.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>Texan Brotherhood</h1>
       <p><figure><img src="../img/BoS.webp" style="width:100%"><figcaption>Texan Brotherhood Crest</figcaption></figure>The Texan Brotherhood is a splinter faction of the Brotherhood of Steel that is located in the former state of Texas. Unlike their counterparts in the West Coast, the Texan Brotherhood has embraced a more flexible and adaptable approach to their mission of preserving and advancing technology.</p>
