--- a/Fallout/world/regionindex.html
+++ b/Fallout/world/regionindex.html
@@ -15,6 +15,13 @@
     <div id="navcontainer" class="navcontainer">
       <script src="../pipnav2.js"></script>
     </div>
+    <div id="date">
+      <span id="day"></span>
+      <span id="month"></span>
+      <span id="year"></span>
+      <span class="time"></span>
+    </div>
+    <script src="../clock.js"></script>
     <div class="screen">
       <h1>Major Regions</h1>
       <p><a class="pipboy" href="CAP.html">The Capital Wasteland</a></p>
