--- a/Fallout/localmap.html
+++ b/Fallout/localmap.html
@@ -32,8 +32,7 @@
       <a style="float: right; margin-right: 5%; color: #009a00; font-family:'Fira Mono', monospace;  font-size:30px;" href="../maps/FalloutHoustinMap.html">Full Screen Map</a>
     </div>
     <div class="screen">
-      <div class="greentint"></div>
-      <iframe class="falloutwiki" src="../maps/FalloutHoustinMap.html" width="100%" height="100%"></iframe>
+      <iframe class="bigmap" src="../maps/FalloutHoustinMap.html" width="100%" height="100%"></iframe>
       </div>
 
 
