--- a/stories/maevesdiary.html
+++ b/stories/maevesdiary.html
@@ -60,6 +60,8 @@
       <li><a href="#Day4">Entry 4</a></li>
       <li><a href="#Day5">Entry 5</a></li>
       <li><a href="#Day6">Entry 6</a></li>
+      <li><a href="#Day7">Entry 7</a></li>
+      <li><a href="#Day8">Entry 8</a></li>
 </ol>
 </div>
 
@@ -256,35 +258,66 @@
     <p>Anyways, we rocked so hard that a litch exploded or something? I'll be honest. I have no idea what was going on. Some tablets went boom, th elocal warlord showed up and insisted we'd blown up a litch... I don't even... Mabey I should start going with Number more? Or less. I don't want to fight a litch, actualy. They can clearly handle these things.</p>
     <p>Then again if they run into a pack of clhenthar... Now that, that they would need me for.</p>
     <p>You know, i'm starting to think that these mercs Silargus hired are all adventures except for me. I hope not... I don't think my poor little head could handle that kind of shenaganery.</p>
-<<<<<<< HEAD
   </div>
 </div>
 
 <div class="journal">
   <div class="notepage">
     <h4 id="Day6">Dear Diary,</h4>
-    <p>Lots of routine. Who knew that starting a factory would be so time consuming and also boring. At least I managed to get the railway gun prototype finished, tested, and sent to the Rail Knights for their own testing. Hopefully that takes off! Related, I got some mail. Helestria and the Empire both want me to supply them with Cropdusters. That's the first gun I made. I'm going to go for it. Sure, soldiers getting them means they'll be used in war, but even troops need monster protection and, well... Not like they couldn't just reverse engineer them. They've very simple guns.</p>
-    <p>Basically a tube.</p>
-    <p>We went to Qi̘v āwnāq today. It's a big city in Hobben! More specifically the Westhe Earldom. My sisters and I always wanted to visit Grovemont. Well this was just like it! But bigger, and with <i>less</i> Gobs. Amazingly. Considering were in one of their countries.</p>
-    <p>I liked how verticale the city was. You could do a climb ver gud! I'll bet the mail person has to work real hard though. They must have a bad back from taking all the packages up the steps. I wonder if the city ever thought about hiring a second one?</p>
+    <p>Lots of routine. Who knew that starting a factory would be so time consuming and also boring. At least I managed to get the railway gun prototype finished, tested, and sent to the Rail Knights for their own testing. Hopefuly that takes off! Related, I got some mail. Helestria and the Empire both want me to supply them with Cropdusters. That's the first gun I made. I'm going to go for it. Sure, solgiers getting them means they'll be used in war, but even troops need monster portection and, well... Not like they couldn't just reverse engineer them. They've very simple guns.</p>
+    <p>Basicaly a tube.</p>
+    <p>We went to Qi̘v āwnāq today. It's a big city in Hobben! More specificly the Westhe Earldom. My sisters and I always wanted to visit Grovemont. Well this was just liek it! But bigger, and with <i>less</i> Gobs. Amazingly. Concidering were in one of their contries.</p>
+    <p>I liked how verticale the city was. You could do a climb ver gud! I'll bet the mailperson has to work real hard though. They must have a bad back from taking all the packages up the steps. I wonder if the city ever thought about hiring a second one?</p>
     <p>Uppon reflection, larger towns probably have more mail people.</p>
-    <p>Anyways, Numbers had some friends or possibly family in town (I don't know I was distracted by thinking of climbing up this real tall building to check and see if I could swat at some of the city's airships) and she started a block party with them. I skipped out on it because I had another letter from Lover's Lab. They wanted me to do a thingie, so I ya know, hadta.</p>
-    <p>Its pretty great here. They even have people in hooded robes watching everyone. Just like home! Best police uniforms ever.</p>
-    <p>Anyways, I got to the university the Lab wanted me to go to and got a bit lost. One of the college peoples helped me find out what I was supposed to do. Apparently they wanted me to fix some tapestry for some reason? Not sure why. Like, at all. But I did. I think. It was a very elaborate confusing knot work piece. Some kind of abstract modern art thingie. I hate those so much.</p>
+    <p>Anyways, Numbers had some friends or possibly family in town (I don't know I was distracted by thinking of climbing up this real tall building to check and see if I could swat at some of the city's airships) and she started a block party with them. I skipped out on it because I had anothe rletter from Lover's Lab. They wanted me to do a thingie, so I ya know, hadta.</p>
+    <p>Its pritty great here. They even have people in hoodes robes watching everyone. Just like home! Best poleice uniforms ever.</p>
+    <p>Anyways, I got to the university the Lab wanted me to go to and got a bit lost. One of the ollege peoples helped me find out what I was supposed to do. Apparently they wanted me to fix some tapestry for some reason? Not sure why. Like, at all. But I did. I think. It was a very alaborate confusing knotwork piece. Some kind of abstract modern art thingie. I hate those so much.</p>
     <p>Art should be of stuff, not feelings.</p>
-    <p>Anyways, the lady who helped me got distracted by a machine, so I left without bothering her. I don't like when people bother me when I'm focused like that. So, you know.</p>
-    <p>On the way out the librarian offered to let me barrow some books. I've never been to a college before, so I knew these would be books worth reading. I asked them for any books they had on metallic dragons, the shadow plane, and advanced construct design. They had some! Including a real friggan big book on construct design! Its heavy as hell.</p>
+    <p>Anyways, the lady who helped me got distracted by a machine, so I left without bothering her. I dont like when people bother me when I'm focused like that. So, you know.</p>
+    <p>On the way out the librarian offered to let me barrow some books. I've never been to a college before, so I kenw these would be books worth reading. I asked them for any books they had on metalic dragons, the shadow plane, and advanced construct design. They had some! Including a real friggan big book on construct design! Its heavy as hell.</p>
     <p>What is the mass of hell anyways? It's gotta be <u>a lot</u>.</p>
-    <p>I cloaked and ran it back to the Mark 1 so no one would steal it. I made it there safe and sound and secured all of my books in the vehicle's safe. Once everything was secure, I went to go find Numbers.</p>
-    <p>She was at her block party, which... I should have remembered. She talked me into helping her play even though I'm so bad I shattered a prop at the last performance. At least she likes me.</p>
-    <p>This time I played so bad that some guy exploded into a bigger dude. At least, I think that was my bad. In my defense I was pretty distracted by the city having an Elder Brain in it... So... Yeah.</p>
-    <p>Probably not coming back. Also going to go to a healer and get checked for any signs of thralling. Also I'm going to have to report this.</p>
+    <p>I cloaked and ran it back to the Mark 1 so no one would steal it. I made it there safe and sound and secured all of my books in the vehical's safe. Once everything was secure, I went to go find Numbers.</p>
+    <p>She was at her block party, which... I should have remembered. She talked me into helping her play even thouh I'm so bad I shattered a prop at the alst preformance. At least she likes me.</p>
+    <p>This time I played so bad that some guy exploded into a bigger dude. At least, I think that was my bad. In my defence I was pritty distracted by the city having an Elder Brain in it... So... Yeah.</p>
+    <p>Probably not coming back. Also going to go to a healer and get checked for any signs of thrallwing. Also I'm going to have to report this.</p>
     <p>Yay... P̸̗̬̭̔̀á̶̻͖̮̮͝p̶͎̝̥̐͊̕e̵̡̠͕̓̈̈̍͜r̶͇͖̮̒w̶͕͕̟̓̅̀̚ͅo̵̗̺̽r̷̰̉́́̉k̷̗͈̒</p>
     <h4>P.S.</h4>
-    <p>Numbers told me they already handled the station. Good! No hell for Maeve today c:</p>
-
+    <p>Numbers told me they allready handled the sitation. Good! No hell for Maeve today c:</p>
   </div>
 </div>
+
+<div class="journal">
+  <div class="notepage">
+	<h4 id="Day7">Dear Diary,</h4>
+	<p>It's the 2nd of Longwheat. I know I haven't written an entry in a while, it's just a lot of stuff happened and I didn't have any real opportunity to write an entry. Sure, I normally only do one a month, and you'd think I could find time for it but... not really.</p>
+	<p>Business has exploded. I've had to oversee the opening of about a dozen factories. I launched the Railway Gun. I launched a special factory for oversized weapons for the rail knights for their custom orders. I started up a few workshops for working with armor and construct systems. There's been a few delves with the team too.</p>
+	<p>On top of that, I have a girlfriend now, and she has more time and priority than some silly diary, so my spare time went to her. Especially since she's in charge of decorating our new house. She had things she needed to run by me, because she's sweet and takes my opinions into consideration.</p>
+	<p>Why don't dads do that?</p>
+	<p>I had something of a big life goal achieved last month too. I finally got my sisters out off Dad's place. The team and I went to Abing, and they were the expect bunch of worrywarts / citiots who don't know that old houses look creepy and that's just normal. So they stayed at an inn instead of the manor. Gods save me from the silly billies.</p>
+	<p>While they checked out Abing, apparently doing a little cultbusting, I caught up with my sisters and had a good time not seeing dad. Then when I went to see why Lord Untz was clam jamming me on buying land, she kind of made me inherit the old Bidwell Estate. So I set the girls up there.</p>
+	<p>I had kind of a hard time hiring staff for the place, but it's all done now. They'll be well cared for, safe from dad, and best of all, Lacey's wife can move in with her! Also she dosn't have to dress if she dosn't want to now. Which is great for anyone into their spouse's culture.</p>
+	<p>With them safe, I can move on to other things. Sooner than I wanted to... unfortunately.</p>
+	<p>Back in the Militia, the XOs and I made a list of 5 things that would inevitably start another major war. Maybe even a Gnoll War. One of them happened in Pitchem. Not that I need to get into it. Everyone knows about the assassination.</p>
+	<p>I dont think we're going to be on the front lines of the war here, but the real horrors of war don't happen on the battlefield. Sure, death, chaos, carnage, blah blah blah Big deal! We trained for that shit. That's peanuts. The real horror is back home, for civilians. They din’t train for this crap. Political maneuvering, starvation, supply disruption desperation. There is going to be so much more room for so much more evil soon.</p>
+	<p>I want to stop as much of it as I can.</p>
+	<p>To that end, I need a way to get around faster than my tractor can get me places. Fortunately, as retired military and an arms dealer I have some connections. And they gave me ideas and options. One of which I took.</p>
+	<p>I'm going to purchase a AH-77 “Airwolf” variable frame ornithopter (and pilot lessons) from Zelu Beki. They've been known to sell them from time to time, and I negotiated an appointment for them to hear my case for one over the Aethiary. Only problem is I have to go in person. On a day the team had something planed.</p>
+	<p>They were understanding, but I still feel bad about it. I should have probably mentioned something more than "I need to get us some rapid transport." Oh well. I'll see them after I get back in a week or so. Time for an extra long train ride. I hate those.</p>
+  </div>
+</div>
+
+<div class="journal">
+  <div class="notepage">
+	<h4 id="Day8">Dear Diary,</h4>
+	<p>It's the 13th of Longwheat. I made the purchase and got the flight training. It's not that much more difficult to fly than it is to drive. I don't think I'd want to fight in this thing yet, but I can get from A to B without dying to needing to call the insurance company.</p>
+	<p>I wonder what the team will think about my new toy? The Airwolf is not a well known aircraft, if you do know it, you know it's a weird old ZOman design Zelu Beki still uses and it's somehow a heavier than air flying machine. So, for those who don't know, they're basically a big metal dragonfly with rocket motors that seats 2 up front, 8 in the back, and can carry cargo containers, tanks, and other vehicles about no problem! At least, in its hover mode.</p>
+	<p>They've got four wings, like a dragonfly. The wings can flap and buzz to move slowly but with precision just like an insect. You can hit a button and fix them in place to transition to a medium speed high maneuverability flying mode like a bird, and hit another button for, as my instructor put it, "Full Beans". Full beans is just about as fast as most bullets, I think. Mabey a bit more. It's hella loud, hella fast, and you're not going to be making any real turns at that speed.</p>
+	<p>I enjoyed my time at the beep-boop city. I like how everyone there looked unique. It makes me wish I could just hack saw off a body part and bolt on anything I wanted. There are times I'd love to have tracks instead of legs. Like, all of mud season. Because, you know. Mud.</p>
+	<p>Anyways, I got a vertical hanger in the bunker for parking this bird... bug? Birug? Thingie? I got a vertical take off and landing hanger for this girl to live in. Its got remote pilot capabilities, so my wife can remote it on over to me as needed. Given the existence of Full Beans, she'll live in her hanger most of the time. I think she's about five minutes form anywhere I'm likely to be in the Vale.</p>
+	<p>I guess that means the guys wont know i have her. I guess I'll buzz the camp on the way in.</p>
+  </div>
+</div>
+
 
 <!--
 <div class="journal">
